--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    font-family: 'Poppins', sans-serif;
+    background: #424040;
+}
+nav{
+    display: flex;
+    align-items:flex-end;
+    justify-content: space-between;
+    padding: 20px 50px;
+    background: #dd2f2f;
+    
+}
