--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,12 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Montserrat', Arial, Helvetica, sans-serif;
     background:#141414;
     color:#fff;
 }
 
+/* HEADER */
 
 header{
     background:linear-gradient(to bottom, #000, #141414);
@@ -18,15 +19,19 @@ header{
 }
 
 header h1{
+    font-family:'Bebas Neue', sans-serif;
     color:#e50914;
-    font-size:40px;
+    font-size:56px;
     margin-bottom:5px;
+    letter-spacing:2px;
 }
 
 header p{
     color:#bbb;
+    font-weight:300;
 }
 
+/* NAV */
 
 nav{
     background:#000;
@@ -39,16 +44,12 @@ nav ul{
     justify-content:center;
 }
 
-nav ul li{
-    margin:0;
-}
-
 nav ul li a{
     display:block;
     padding:15px 25px;
     color:#fff;
     text-decoration:none;
-    font-weight:bold;
+    font-weight:600;
     transition:0.3s;
 }
 
@@ -56,16 +57,21 @@ nav ul li a:hover{
     color:#e50914;
 }
 
+/* CONTENIDO */
 
 .container{
     padding:30px;
 }
 
 section h2{
+    font-family:'Bebas Neue', sans-serif;
     margin-bottom:20px;
     color:#e50914;
+    font-size:32px;
+    letter-spacing:1px;
 }
 
+/* GRID */
 
 .grid{
     display:grid;
@@ -73,6 +79,7 @@ section h2{
     gap:18px;
 }
 
+/* CARD */
 
 .card{
     background:#1c1c1c;
@@ -83,11 +90,10 @@ section h2{
     position:relative;
 }
 
-
 .card:hover{
     transform:scale(1.08);
     z-index:5;
-    box-shadow:0 0 15px rgba(229,9,20,0.6);
+    box-shadow:0 0 20px rgba(229,9,20,0.7);
 }
 
 .card img{
@@ -97,8 +103,9 @@ section h2{
 }
 
 .card h3{
-    font-size:16px;
+    font-size:18px;
     margin:10px;
+    font-weight:600;
 }
 
 .card p{
@@ -106,6 +113,8 @@ section h2{
     color:#bbb;
     margin:0 10px 15px;
 }
+
+/* FOOTER */
 
 footer{
     background:#000;
@@ -115,6 +124,7 @@ footer{
     margin-top:40px;
 }
 
+/* SCROLLBAR */
 
 ::-webkit-scrollbar{
     width:8px;
