--- a/css/index.css
+++ b/css/index.css
@@ -10,30 +10,60 @@ body{
     color:#fff;
 }
 
-/* HEADER */
+
 
 header{
-    background:linear-gradient(to bottom, #000, #141414);
-    padding:25px;
-    text-align:center;
+    position:relative;
+    overflow:hidden;
+}
+
+
+
+header video{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    filter:brightness(55%);
+}
+
+
+
+header::after{
+    content:"";
+    position:absolute;
+    inset:0;
+    background:linear-gradient(to top, rgba(0,0,0,.95), rgba(0,0,0,.3));
 }
 
 
 
 header h1{
+    position:center;
     font-family:'Bebas Neue', sans-serif;
-    color:#e50914;
-    font-size:56px;
-    margin-bottom:5px;
-    letter-spacing:2px;
-}
+    color: #e50914;
+    z-index:2;
 
+}
 header p{
-    color:#bbb;
-    font-weight:300;
+    font-family:'Bebas Neue', sans-serif;
+    color: white;
+    z-index:2;
 }
 
-/* NAV */
+
+
+header{
+    height:75vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+}
+
+
 
 nav{
     background:#000;
@@ -59,7 +89,7 @@ nav ul li a:hover{
     color:#e50914;
 }
 
-/* CONTENIDO */
+
 
 .container{
     padding:30px;
