--- a/css/serie.css
+++ b/css/serie.css
@@ -167,6 +167,13 @@ nav a:hover{
     color:#bbb;
     margin:0 10px 15px;
 }
+footer{
+    background:#000;
+    text-align:center;
+    padding:20px;
+    color:#777;
+    margin-top:40px;
+}
 
 
 
